fix env with qute

--- a/tests/kubernetes-it/docker/helm/values.yaml
+++ b/tests/kubernetes-it/docker/helm/values.yaml
@@ -48,10 +48,10 @@ celeborn:
   celeborn.worker.heartbeat.timeout: 120s
 
 environments:
-  CELEBORN_MASTER_MEMORY: 100m
-  CELEBORN_WORKER_MEMORY: 1g
-  CELEBORN_WORKER_OFFHEAP_MEMORY: 1g
-  CELEBORN_NO_DAEMONIZE: 1
+  CELEBORN_MASTER_MEMORY: '100m'
+  CELEBORN_WORKER_MEMORY: '1g'
+  CELEBORN_WORKER_OFFHEAP_MEMORY: '1g'
+  CELEBORN_NO_DAEMONIZE: '1'
   TZ: "Asia/Shanghai"
 
 podMonitor:
