fix executor memory qutp

--- a/tests/kubernetes-it/docker/helm/values.yaml
+++ b/tests/kubernetes-it/docker/helm/values.yaml
@@ -83,10 +83,10 @@ resources:
   worker:
     limits:
       cpu: 100m
-      memory: 1g
+      memory: 1Gi
     requests:
       cpu: 100m
-      memory: 1g
+      memory: 1Gi
 
 podAnnotations: {}
 
