--- a/tests/kubernetes-it/pom.xml
+++ b/tests/kubernetes-it/pom.xml
@@ -34,13 +34,19 @@
             <groupId>org.apache.celeborn</groupId>
             <artifactId>celeborn-common_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.celeborn</groupId>
-            <artifactId>celeborn-common_${scala.binary.version}</artifactId>
+            <artifactId>celeborn-master_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
-            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.celeborn</groupId>
+            <artifactId>celeborn-worker_${scala.binary.version}</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
