--- a/master/pom.xml
+++ b/master/pom.xml
@@ -94,6 +94,10 @@
       <version>3.6.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
