[CELEBORN-594] Add new Ratis configs.

--- a/conf/log4j2.xml.template
+++ b/conf/log4j2.xml.template
@@ -53,5 +53,9 @@
             <Appender-ref ref="stdout" level="WARN" />
             <Appender-ref ref="file" level="WARN"/>
         </Logger>
+        <Logger name="org.apache.ratis.server.RaftServerConfigKeys" level="WARN" additivity="false">
+              <Appender-ref ref="stdout" level="WARN" />
+             <Appender-ref ref="file" level="WARN"/>
+        </Logger>
     </Loggers>
 </Configuration>
