--- a/pom.xml
+++ b/pom.xml
@@ -1024,6 +1024,25 @@
     </profile>
 
     <profile>
+      <id>spark-3.4</id>
+      <modules>
+        <module>client-spark/common</module>
+        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-shaded</module>
+        <module>tests/spark-it</module>
+      </modules>
+      <properties>
+        <jackson.version>2.14.2</jackson.version>
+        <jackson.databind.version>2.14.2</jackson.databind.version>
+        <lz4-java.version>1.8.0</lz4-java.version>
+        <scala.version>2.12.17</scala.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <spark.version>3.4.0</spark.version>
+        <zstd-jni.version>1.5.2-5</zstd-jni.version>
+      </properties>
+    </profile>
+
+    <profile>
       <id>jdk-8</id>
       <activation>
         <jdk>1.8</jdk>
