--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -39,22 +39,23 @@ securityContext:
 # Current Celeborn support followings volume type:
 # - emptyDir
 # - hostPath
-storage:
+# Note: sizeLimit only works in emptyDir type
+volume:
   master:
     ratis:
-      path: &master-storage-ratis /mnt/rss_ratis
+      path: &master-volume-ratis /mnt/rss_ratis
       type: hostPath
       sizeLimit: 1Gi
   worker:
     dirs:
-      path: &worker-storage-dirs /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4
+      path: &worker-volume-dirs /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4
       type: hostPath
       sizeLimit: 1Gi
 
 # celeborn configurations
 celeborn:
-  celeborn.ha.master.ratis.raft.server.storage.dir: *master-storage-ratis
-  celeborn.worker.storage.dirs: *worker-storage-dirs
+  celeborn.ha.master.ratis.raft.server.storage.dir: *master-volume-ratis
+  celeborn.worker.storage.dirs: *worker-volume-dirs
   celeborn.metrics.enabled: true
   celeborn.master.metrics.prometheus.port: 9098
   celeborn.worker.metrics.prometheus.port: 9096
