--- a/charts/celeborn/templates/configmap.yaml
+++ b/charts/celeborn/templates/configmap.yaml
@@ -33,8 +33,17 @@ data:
     {{- range until (.Values.masterReplicas |int) }}
     celeborn.ha.master.node.{{ . }}.host=celeborn-master-{{ . }}.celeborn-master-svc.{{ $namespace }}.svc.{{ $.Values.cluster.name }}.local
     {{- end }}
-    celeborn.ha.master.ratis.raft.server.storage.dir:{{ .Values.volumes.master.ratis.path }}
-    celeborn.worker.storage.dirs: {{ .Values.volumes.worker.dirs.path }}
+    {{- $dirs := .Values.volumes.master }}
+    celeborn.ha.master.ratis.raft.server.storage.dir={{ (index $dirs 0).path }}/master
+    {{- $path := "" }}
+    {{- range $worker := .Values.volumes.worker }}
+    {{- if eq $path "" }}
+    {{- $path = $worker.path }}
+    {{- else }}
+    {{- $path = ( list  $path $worker.path | join ",") }}
+    {{- end }}
+    {{- end }}
+    celeborn.worker.storage.dirs={{ $path }}
     {{- range $key, $val := .Values.celeborn }}
     {{ $key }}={{ $val }}
     {{- end }}
