--- a/charts/celeborn/templates/worker-statefulset.yaml
+++ b/charts/celeborn/templates/worker-statefulset.yaml
@@ -118,5 +118,7 @@ spec:
           hostPath:
             path: {{ $volume.path }}/worker
             type: DirectoryOrCreate
+        {{- else }}
+        {{ fail "For now Celeborn Helm only support emptyDir or hostPath volume types" }}
         {{- end }}
         {{- end }}
