--- a/charts/celeborn/templates/master-statefulset.yaml
+++ b/charts/celeborn/templates/master-statefulset.yaml
@@ -93,8 +93,10 @@ spec:
           - mountPath: /opt/celeborn/conf
             name: {{ include "celeborn.fullname" . }}-volume
             readOnly: true
-          - name: {{ include "celeborn.fullname" . }}-master-ratis
-            mountPath: {{get .Values.celeborn "celeborn.ha.master.ratis.raft.server.storage.dir"}}
+          {{- range $index, $volume := .Values.volumes.master }}
+          - name: celeborn-master-vol-{{ $index }}
+            mountPath: {{ .path }}
+          {{- end }}
         env:
           {{- range $key, $val := .Values.environments }}
           - name: {{ $key }}
@@ -105,8 +107,16 @@ spec:
         - configMap:
             name: {{ .Values.configmap }}
           name: {{ include "celeborn.fullname" . }}-volume
-        {{- $dirs := get .Values.celeborn "celeborn.worker.storage.dirs" | splitList ","}}
-        - hostPath:
-            path: {{ index $dirs 0 }}/ratis
+        {{- range $index, $volume := .Values.volumes.master }}
+        - name: celeborn-master-vol-{{ $index }}
+        {{- if eq "emptyDir" $volume.type }}
+          emptyDir:
+            sizeLimit: {{ $volume.size }}
+        {{- else if eq "hostPath" $volume.type }}
+          hostPath:
+            path: {{ $volume.path }}/master
             type: DirectoryOrCreate
-          name: {{ include "celeborn.fullname" . }}-master-ratis
+        {{- else }}
+        {{ fail "For now Celeborn Helm only support emptyDir or hostPath volume types" }}
+        {{- end }}
+        {{- end }}
