--- a/charts/celeborn/templates/worker-statefulset.yaml
+++ b/charts/celeborn/templates/worker-statefulset.yaml
@@ -94,10 +94,9 @@ spec:
             name: {{ include "celeborn.fullname" . }}-volume
             readOnly: true
           {{- end }}
-          {{- $dirs := get .Values.celeborn "celeborn.worker.storage.dirs" | splitList "," -}}
-          {{- range $index, $dir := $dirs }}
-          - mountPath: {{ $dir }} 
-            name: vol-{{ $index }}
+          {{- range $index, $volume := .Values.volumes.worker }}
+          - name: celeborn-worker-vol-{{ $index }}
+            mountPath: {{ .path }}
           {{- end }}
         env:
           {{- range $key, $val := .Values.environments }}
@@ -109,9 +108,17 @@ spec:
         - configMap:
             name: {{ .Values.configmap }}
           name: {{ include "celeborn.fullname" . }}-volume
-        {{- range $index, $dir := $dirs }}
-        - hostPath:
-            path: {{ $dir }}/worker
+        {{- range $index, $volume := .Values.volumes.worker }}
+        {{- if eq "emptyDir" $volume.type }}
+        - name: celeborn-worker-vol-{{ $index }}
+          emptyDir:
+            sizeLimit: {{ $volume.size }}
+        {{- else if eq "hostPath" $volume.type }}
+        - name: celeborn-worker-vol-{{ $index }}
+          hostPath:
+            path: {{ $volume.path }}/worker
             type: DirectoryOrCreate
-          name: vol-{{ $index }}
-        {{- end }} 
+        {{- else }}
+        {{ fail "Currently, Celeborn chart only supports 'emptyDir' and 'hostPath' volume types" }}
+        {{- end }}
+        {{- end }}
