--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -23,17 +23,19 @@
 # TODO rebuild celeborn official image
 image:
   repository: aliyunemr/remote-shuffle-service
-  pullPolicy: Always
+  pullPolicy: Never
   tag: 0.1.1-6badd20
 
 imagePullSecrets: {}
 
 # master replicas should not less than 3
-masterReplicas: 3
+masterReplicas: 1
 # worker replicas set on demand, should less than node number
-workerReplicas: 5
+workerReplicas: 1
 
 securityContext:
+  runAsUser: 10006
+  runAsGroup: 10006
   fsGroup: 10006
 
 # Current Celeborn support followings volume type:
