--- a/tests/kubernetes-it/pom.xml
+++ b/tests/kubernetes-it/pom.xml
@@ -45,6 +45,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
+      <artifactId>celeborn-client_${scala.binary.version}</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-master_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
