--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+defusedxml==0.7.1
 ghp-import==2.1.0
 idna==3.4
 importlib-metadata==4.12.0
 Jinja2==3.1.2
+jira==3.5.1
 Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
@@ -30,6 +32,7 @@ mkdocs-include-markdown-plugin==4.0.0
 mkdocs-macros-plugin==0.7.0
 mkdocs-material==8.5.11
 mkdocs-material-extensions==1.1.1
+oauthlib==3.2.2
 packaging==21.3
 Pygments==2.12.0
 pymdown-extensions==9.5
@@ -38,8 +41,11 @@ python-dateutil==2.8.2
 PyYAML==6.0
 pyyaml_env_tag==0.1
 requests==2.28.1
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
 six==1.16.0
 termcolor==1.1.0
+typing_extensions==4.6.3
 urllib3==1.26.13
 watchdog==2.1.9
 zipp==3.8.1
