[CELEBORN-628][HELM] Separate mount & host path on hostPath case
### What changes were proposed in this pull request?
Seperate Mount & Volumes Path On Kubernete Case

### Why are the changes needed?
See detail in https://github.com/apache/incubator-celeborn/pull/1508#discussion_r1208803085

### Does this PR introduce _any_ user-facing change?
Yes

### How was this patch tested?
Local Test

> Values.yaml
```yaml
volumes:
  master:
    - mountPath: /mnt/rss_ratis
      hostPath: /spark/data1
      type: hostPath
      size: 1Gi
  worker:
    - mountPath: /mnt/disk1
      hostPath: /spark/data1
      type: hostPath
      size: 1Gi
    - mountPath: /mnt/disk2
      hostPath: /spark/data2
      type: hostPath
      size: 1Gi
```

>Celeborn Worker Pod
```yaml
containers:
  volumeMounts:
    - mountPath: /mnt/disk1
      name: celeborn-worker-vol-0
    - mountPath: /mnt/disk2
      name: celeborn-worker-vol-1
volumes:
  - hostPath:
      path: /spark/data1/worker
      type: DirectoryOrCreate
    name: celeborn-worker-vol-0
  - hostPath:
      path: /spark/data2/worker
      type: DirectoryOrCreate
    name: celeborn-worker-vol-1
```

Closes #1535 from zwangsheng/CELEBORN-628.

Authored-by: zwangsheng <2213335496@qq.com>
Signed-off-by: Cheng Pan <chengpan@apache.org>

--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -42,23 +42,29 @@ securityContext:
 # - emptyDir
 # - hostPath
 # Note: size only works in emptyDir type
+# hostPath only works in hostPath type using to set `volumes hostPath path`
 # Celeborn Master will pick first volumes for store raft log
 volumes:
   master:
-    - path: /mnt/rss_ratis
+    - mountPath: /mnt/rss_ratis
+      hostPath: /mnt/rss_ratis
       type: hostPath
       size: 1Gi
   worker:
-    - path: /mnt/disk1
+    - mountPath: /mnt/disk1
+      hostPath: /mnt/disk1
       type: hostPath
       size: 1Gi
-    - path: /mnt/disk2
+    - mountPath: /mnt/disk2
+      hostPath: /mnt/disk2
       type: hostPath
       size: 1Gi
-    - path: /mnt/disk3
+    - mountPath: /mnt/disk3
+      hostPath: /mnt/disk3
       type: hostPath
       size: 1Gi
-    - path: /mnt/disk4
+    - mountPath: /mnt/disk4
+      hostPath: /mnt/disk4
       type: hostPath
       size: 1Gi
 
