--- a/charts/celeborn/templates/worker-statefulset.yaml
+++ b/charts/celeborn/templates/worker-statefulset.yaml
@@ -83,12 +83,12 @@ spec:
         - chown
         - {{ .Values.securityContext.runAsUser | default 10006 }}:{{ .Values.securityContext.runAsGroup | default 10006 }}
         {{- range $dir := $dirs }}
-        - {{ $dir.path }}
+        - {{ $dir.mountPath }}
         {{- end}}
         volumeMounts:
         {{- range $index, $dir := $dirs }}
         - name: celeborn-worker-vol-{{ $index }}
-          mountPath: {{ $dir.path }}
+          mountPath: {{ $dir.mountPath }}
         {{- end}}
       {{- end }}
       containers:
@@ -116,7 +116,7 @@ spec:
           {{- end }}
           {{- range $index, $volume := .Values.volumes.worker }}
           - name: celeborn-worker-vol-{{ $index }}
-            mountPath: {{ .path }}
+            mountPath: {{ .mountPath }}
           {{- end }}
         env:
           {{- range $key, $val := .Values.environments }}
@@ -136,7 +136,7 @@ spec:
         {{- else if eq "hostPath" $volume.type }}
         - name: celeborn-worker-vol-{{ $index }}
           hostPath:
-            path: {{ $volume.path }}/worker
+            path: {{ $volume.hostPath | default $volume.mountPath }}/worker
             type: DirectoryOrCreate
         {{- else }}
         {{ fail "Currently, Celeborn chart only supports 'emptyDir' and 'hostPath' volume types" }}
