[CELEBORN-105][TEST] Kubernetes Integration Test
### What changes were proposed in this pull request?
Add Kubernetes Integration Test
- [x] test helm install deploy
- [ ] test shuffle

### Why are the changes needed?
Add integration test

### Does this PR introduce _any_ user-facing change?
No

### How was this patch tested?
Ci test

Closes #1484 from zwangsheng/CELEBORN-105.

Authored-by: zwangsheng <2213335496@qq.com>
Signed-off-by: Cheng Pan <chengpan@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <roaringbitmap.version>0.9.32</roaringbitmap.version>
     <snakeyaml.version>1.33</snakeyaml.version>
     <zstd-jni.version>1.5.2-1</zstd-jni.version>
+    <kubernetes-client.version>6.7.0</kubernetes-client.version>
 
     <shading.prefix>org.apache.celeborn.shaded</shading.prefix>
 
@@ -409,6 +410,12 @@
         <groupId>org.mockito</groupId>
         <artifactId>mockito-scala-scalatest_${scala.binary.version}</artifactId>
         <version>${mockito-scalatest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.fabric8</groupId>
+        <artifactId>kubernetes-client</artifactId>
+        <version>${kubernetes-client.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -1120,6 +1127,13 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>kubernetes-it</id>
+      <modules>
+        <module>tests/kubernetes-it</module>
+      </modules>
     </profile>
   </profiles>
 </project>
