[CELEBORN-1190][FOLLOWUP] Fix WARNING of error prone

--- a/pom.xml
+++ b/pom.xml
@@ -1135,14 +1135,18 @@
               <arg>-XDcompilePolicy=simple</arg>
               <arg>-Xplugin:ErrorProne \
                 -XepExcludedPaths:.*/target/generated-sources/protobuf/.* \
-                -Xep:FutureReturnValueIgnored:OFF \
-                -Xep:TypeParameterUnusedInFormals:OFF \
-                -Xep:UnusedVariable:OFF \
-                -Xep:StringSplitter:OFF \
+                -Xep:BadImport:OFF \
                 -Xep:EmptyBlockTag:OFF \
+                -Xep:EmptyCatch:OFF \
                 -Xep:EqualsGetClass:OFF \
+                -Xep:FutureReturnValueIgnored:OFF \
+                -Xep:JdkObsolete:OFF \
                 -Xep:MissingSummary:OFF \
-                -Xep:BadImport:OFF</arg>
+                -Xep:MutableConstantField:OFF \
+                -Xep:StringSplitter:OFF \
+                -Xep:TypeParameterUnusedInFormals:OFF \
+                -Xep:UnnecessaryParentheses:OFF \
+                -Xep:UnusedVariable:OFF</arg>
             </compilerArgs>
             <annotationProcessorPaths>
               <path>
@@ -1493,14 +1497,18 @@
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne \
                   -XepExcludedPaths:.*/target/generated-sources/protobuf/.* \
-                  -Xep:FutureReturnValueIgnored:OFF \
-                  -Xep:TypeParameterUnusedInFormals:OFF \
-                  -Xep:UnusedVariable:OFF \
-                  -Xep:StringSplitter:OFF \
+                  -Xep:BadImport:OFF \
                   -Xep:EmptyBlockTag:OFF \
+                  -Xep:EmptyCatch:OFF \
                   -Xep:EqualsGetClass:OFF \
+                  -Xep:FutureReturnValueIgnored:OFF \
+                  -Xep:JdkObsolete:OFF \
                   -Xep:MissingSummary:OFF \
-                  -Xep:BadImport:OFF</arg>
+                  -Xep:MutableConstantField:OFF \
+                  -Xep:StringSplitter:OFF \
+                  -Xep:TypeParameterUnusedInFormals:OFF \
+                  -Xep:UnnecessaryParentheses:OFF \
+                  -Xep:UnusedVariable:OFF</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
@@ -1549,14 +1557,18 @@
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne \
                   -XepExcludedPaths:.*/target/generated-sources/protobuf/.* \
-                  -Xep:FutureReturnValueIgnored:OFF \
-                  -Xep:TypeParameterUnusedInFormals:OFF \
-                  -Xep:UnusedVariable:OFF \
-                  -Xep:StringSplitter:OFF \
+                  -Xep:BadImport:OFF \
                   -Xep:EmptyBlockTag:OFF \
+                  -Xep:EmptyCatch:OFF \
                   -Xep:EqualsGetClass:OFF \
+                  -Xep:FutureReturnValueIgnored:OFF \
+                  -Xep:JdkObsolete:OFF \
                   -Xep:MissingSummary:OFF \
-                  -Xep:BadImport:OFF</arg>
+                  -Xep:MutableConstantField:OFF \
+                  -Xep:StringSplitter:OFF \
+                  -Xep:TypeParameterUnusedInFormals:OFF \
+                  -Xep:UnnecessaryParentheses:OFF \
+                  -Xep:UnusedVariable:OFF</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
